Introduction of spotless-maven-plugin, code reformatting (#515)
* Introduction of spotless-maven-plugin, code reformatting