@@ -65,41 +65,40 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 class ErrorServiceTest extends BaseTest {
-  @Autowired
-  private ErrorService errorService;
+  @Autowired private ErrorService errorService;
 
-  @Autowired
-  private BulkOperationRepository bulkOperationRepository;
+  @Autowired private BulkOperationRepository bulkOperationRepository;
 
-  @Autowired
-  private BulkOperationExecutionContentRepository executionContentRepository;
+  @Autowired private BulkOperationExecutionContentRepository executionContentRepository;
 
-  @Autowired
-  private BulkOperationProcessingContentRepository processingContentRepository;
+  @Autowired private BulkOperationProcessingContentRepository processingContentRepository;
 
   @Autowired
   private JpaCqlRepository<BulkOperationExecutionContent, UUID> executionContentCqlRepository;
 
-  @MockitoBean
-  private RemoteFileSystemClient remoteFileSystemClient;
+  @MockitoBean private RemoteFileSystemClient remoteFileSystemClient;
 
   private UUID bulkOperationId;
 
   @BeforeEach()
   void saveBulkOperation() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
 
-      bulkOperationId = bulkOperationRepository.save(BulkOperation.builder()
-        .id(UUID.randomUUID())
-        .identifierType(IdentifierType.HRID)
-        .linkToTriggeringCsvFile("some/path/records.csv")
-        .build()).getId();
+      bulkOperationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
+                      .id(UUID.randomUUID())
+                      .identifierType(IdentifierType.HRID)
+                      .linkToTriggeringCsvFile("some/path/records.csv")
+                      .build())
+              .getId();
     }
   }
 
   @AfterEach
   void clearTestData() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       bulkOperationRepository.deleteById(bulkOperationId);
       executionContentRepository.deleteByBulkOperationId(bulkOperationId);
     }
@@ -107,11 +106,12 @@ class ErrorServiceTest extends BaseTest {
 
   @Test
   void shouldSaveError() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       errorService.saveError(bulkOperationId, "123", "Error message", ErrorType.ERROR);
 
-      var result = executionContentCqlRepository.findByCql("bulkOperationId==" + bulkOperationId,
-              OffsetRequest.of(0, 10));
+      var result =
+          executionContentCqlRepository.findByCql(
+              "bulkOperationId==" + bulkOperationId, OffsetRequest.of(0, 10));
 
       assertThat(result.toList(), hasSize(1));
       var content = result.iterator().next();
@@ -123,16 +123,17 @@ class ErrorServiceTest extends BaseTest {
   @Test
   @SneakyThrows
   void shouldUploadErrorsAndReturnLinkToFile() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       errorService.saveError(bulkOperationId, "123", "Error message 123", ErrorType.ERROR);
       errorService.saveError(bulkOperationId, "456", "Error message 456", ErrorType.WARNING);
 
-      var expectedFileName = bulkOperationId + "/" + LocalDate.now()
-              + "-Committing-changes-Errors-records.csv";
+      var expectedFileName =
+          bulkOperationId + "/" + LocalDate.now() + "-Committing-changes-Errors-records.csv";
       when(remoteFileSystemClient.put(any(), eq(expectedFileName))).thenReturn(expectedFileName);
 
-      var result = errorService.uploadErrorsToStorage(bulkOperationId,
-              ERROR_COMMITTING_FILE_NAME_PREFIX, null);
+      var result =
+          errorService.uploadErrorsToStorage(
+              bulkOperationId, ERROR_COMMITTING_FILE_NAME_PREFIX, null);
       assertThat(result, equalTo(expectedFileName));
 
       var streamCaptor = ArgumentCaptor.forClass(InputStream.class);
@@ -140,27 +141,34 @@ class ErrorServiceTest extends BaseTest {
       var actual = new String(streamCaptor.getValue().readAllBytes());
       var actualArr = actual.split("\n");
       Arrays.sort(actualArr);
-      var expectedArr
-              = new String[] {"ERROR,123,Error message 123", "WARNING,456,Error message 456"};
+      var expectedArr =
+          new String[] {"ERROR,123,Error message 123", "WARNING,456,Error message 456"};
       assertArrayEquals(expectedArr, actualArr);
     }
   }
 
   @ParameterizedTest
-  @EnumSource(value = OperationStatusType.class, names = { "DATA_MODIFICATION", "COMPLETED" },
-          mode = EnumSource.Mode.INCLUDE)
+  @EnumSource(
+      value = OperationStatusType.class,
+      names = {"DATA_MODIFICATION", "COMPLETED"},
+      mode = EnumSource.Mode.INCLUDE)
   void shouldGetErrorsPreviewByBulkOperationId(OperationStatusType statusType) throws IOException {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operationId = bulkOperationRepository.save(BulkOperation.builder()
-              .id(UUID.randomUUID())
-              .dataExportJobId(UUID.randomUUID())
-              .linkToMatchedRecordsErrorsCsvFile("link-to-errors-csv")
-              .status(statusType).build()).getId();
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var operationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
+                      .id(UUID.randomUUID())
+                      .dataExportJobId(UUID.randomUUID())
+                      .linkToMatchedRecordsErrorsCsvFile("link-to-errors-csv")
+                      .status(statusType)
+                      .build())
+              .getId();
 
       mockErrorsData(statusType, operationId);
 
-      var actualWithOffset = errorService.getErrorsPreviewByBulkOperationId(operationId, 2, 1,
-              null);
+      var actualWithOffset =
+          errorService.getErrorsPreviewByBulkOperationId(operationId, 2, 1, null);
       assertThat(actualWithOffset.getErrors(), hasSize(1));
       assertThat(actualWithOffset.getTotalRecords(), equalTo(2));
 
@@ -169,33 +177,49 @@ class ErrorServiceTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @EnumSource(value = OperationStatusType.class,
-          names = {
-            "DATA_MODIFICATION", "REVIEW_CHANGES", "COMPLETED_WITH_ERRORS",
-            "COMPLETED", "REVIEWED_NO_MARC_RECORDS" },
-          mode = EnumSource.Mode.EXCLUDE)
+  @EnumSource(
+      value = OperationStatusType.class,
+      names = {
+        "DATA_MODIFICATION",
+        "REVIEW_CHANGES",
+        "COMPLETED_WITH_ERRORS",
+        "COMPLETED",
+        "REVIEWED_NO_MARC_RECORDS"
+      },
+      mode = EnumSource.Mode.EXCLUDE)
   void shouldRejectErrorsPreviewOnWrongOperationStatus(OperationStatusType statusType) {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operationId = bulkOperationRepository.save(BulkOperation.builder().id(UUID.randomUUID())
-              .status(statusType).build()).getId();
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var operationId =
+          bulkOperationRepository
+              .save(BulkOperation.builder().id(UUID.randomUUID()).status(statusType).build())
+              .getId();
 
-      assertThrows(NotFoundException.class,
-              () -> errorService.getErrorsPreviewByBulkOperationId(operationId, 10, 0,
-                      ErrorType.ERROR));
+      assertThrows(
+          NotFoundException.class,
+          () ->
+              errorService.getErrorsPreviewByBulkOperationId(operationId, 10, 0, ErrorType.ERROR));
 
       bulkOperationRepository.deleteById(operationId);
     }
   }
 
   @ParameterizedTest
-  @EnumSource(value = OperationStatusType.class, names = { "DATA_MODIFICATION", "COMPLETED" },
-          mode = EnumSource.Mode.INCLUDE)
+  @EnumSource(
+      value = OperationStatusType.class,
+      names = {"DATA_MODIFICATION", "COMPLETED"},
+      mode = EnumSource.Mode.INCLUDE)
   void shouldGetErrorsCsvByBulkOperationId(OperationStatusType statusType) throws IOException {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operationId = bulkOperationRepository.save(BulkOperation.builder().id(UUID.randomUUID())
-              .linkToMatchedRecordsErrorsCsvFile("link-to-errors-csv")
-              .dataExportJobId(UUID.randomUUID())
-              .status(statusType).build()).getId();
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var operationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
+                      .id(UUID.randomUUID())
+                      .linkToMatchedRecordsErrorsCsvFile("link-to-errors-csv")
+                      .dataExportJobId(UUID.randomUUID())
+                      .status(statusType)
+                      .build())
+              .getId();
 
       var expected = "ERROR,123,No match found\nERROR,456,Invalid format".split(LF);
 
@@ -213,17 +237,26 @@ class ErrorServiceTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @EnumSource(value = OperationStatusType.class,
-          names = { "DATA_MODIFICATION", "REVIEW_CHANGES", "COMPLETED",
-                    "COMPLETED_WITH_ERRORS", "REVIEWED_NO_MARC_RECORDS" },
-          mode = EnumSource.Mode.EXCLUDE)
+  @EnumSource(
+      value = OperationStatusType.class,
+      names = {
+        "DATA_MODIFICATION",
+        "REVIEW_CHANGES",
+        "COMPLETED",
+        "COMPLETED_WITH_ERRORS",
+        "REVIEWED_NO_MARC_RECORDS"
+      },
+      mode = EnumSource.Mode.EXCLUDE)
   void shouldRejectErrorsCsvOnWrongOperationStatus(OperationStatusType statusType) {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operationId = bulkOperationRepository.save(BulkOperation.builder().id(UUID.randomUUID())
-              .status(statusType).build()).getId();
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
+      var operationId =
+          bulkOperationRepository
+              .save(BulkOperation.builder().id(UUID.randomUUID()).status(statusType).build())
+              .getId();
 
-      assertThrows(NotFoundException.class,
-              () -> errorService.getErrorsCsvByBulkOperationId(operationId, 0, ErrorType.ERROR));
+      assertThrows(
+          NotFoundException.class,
+          () -> errorService.getErrorsCsvByBulkOperationId(operationId, 0, ErrorType.ERROR));
 
       bulkOperationRepository.deleteById(operationId);
     }
@@ -232,10 +265,13 @@ class ErrorServiceTest extends BaseTest {
   @ParameterizedTest
   @ValueSource(ints = {0, 1})
   void shouldReturnErrorsPreviewOnCompletedWithErrors(int committedErrors) throws IOException {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var jobId = UUID.randomUUID();
 
-      var operationId = bulkOperationRepository.save(BulkOperation.builder()
+      var operationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
                       .id(UUID.randomUUID())
                       .status(COMPLETED_WITH_ERRORS)
                       .committedNumOfErrors(committedErrors)
@@ -247,12 +283,14 @@ class ErrorServiceTest extends BaseTest {
       mockErrorsData(COMPLETED_WITH_ERRORS, operationId);
 
       if (committedErrors == 1) {
-        executionContentRepository.save(BulkOperationExecutionContent.builder()
+        executionContentRepository.save(
+            BulkOperationExecutionContent.builder()
                 .bulkOperationId(operationId)
                 .identifier("123")
                 .errorMessage("No match found")
                 .build());
-        executionContentRepository.save(BulkOperationExecutionContent.builder()
+        executionContentRepository.save(
+            BulkOperationExecutionContent.builder()
                 .bulkOperationId(operationId)
                 .identifier("456")
                 .errorMessage("Invalid format")
@@ -269,11 +307,14 @@ class ErrorServiceTest extends BaseTest {
   @ParameterizedTest
   @ValueSource(ints = {0, 1})
   void shouldReturnOnlyErrorsTotalNumberPreviewOnCompletedWithErrors(int committedErrors)
-          throws IOException {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+      throws IOException {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var jobId = UUID.randomUUID();
 
-      var operationId = bulkOperationRepository.save(BulkOperation.builder()
+      var operationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
                       .id(UUID.randomUUID())
                       .status(COMPLETED_WITH_ERRORS)
                       .committedNumOfErrors(committedErrors)
@@ -285,13 +326,15 @@ class ErrorServiceTest extends BaseTest {
       mockErrorsData(COMPLETED_WITH_ERRORS, operationId);
 
       if (committedErrors == 1) {
-        executionContentRepository.save(BulkOperationExecutionContent.builder()
+        executionContentRepository.save(
+            BulkOperationExecutionContent.builder()
                 .bulkOperationId(operationId)
                 .identifier("123")
                 .errorType(ErrorType.ERROR)
                 .errorMessage("No match found")
                 .build());
-        executionContentRepository.save(BulkOperationExecutionContent.builder()
+        executionContentRepository.save(
+            BulkOperationExecutionContent.builder()
                 .bulkOperationId(operationId)
                 .identifier("456")
                 .errorType(ErrorType.ERROR)
@@ -310,7 +353,10 @@ class ErrorServiceTest extends BaseTest {
   void testOptimisticLockErrorProcessing() {
 
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operationId = bulkOperationRepository.save(BulkOperation.builder()
+      var operationId =
+          bulkOperationRepository
+              .save(
+                  BulkOperation.builder()
                       .id(UUID.randomUUID())
                       .status(COMPLETED_WITH_ERRORS)
                       .committedNumOfErrors(1)
@@ -318,11 +364,13 @@ class ErrorServiceTest extends BaseTest {
                       .build())
               .getId();
 
-      var link = "/inventory/view/ff12f28b-1982-4a8d-982c-c797bf92d479/"
+      var link =
+          "/inventory/view/ff12f28b-1982-4a8d-982c-c797bf92d479/"
               + "1028b1eb-0b9d-4fe9-a458-2f0a8570cf9c";
       var message = format(CSV_MSG_ERROR_TEMPLATE_OPTIMISTIC_LOCKING, 2, 1);
 
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(operationId)
               .identifier("789")
               .errorMessage(format("%s %s", message, link))
@@ -331,8 +379,8 @@ class ErrorServiceTest extends BaseTest {
               .errorType(ErrorType.ERROR)
               .build());
 
-      var errors = errorService.getErrorsPreviewByBulkOperationId(operationId, 1, 0,
-              ErrorType.ERROR);
+      var errors =
+          errorService.getErrorsPreviewByBulkOperationId(operationId, 1, 0, ErrorType.ERROR);
 
       assertThat(errors.getErrors(), hasSize(1));
       assertThat(errors.getErrors().get(0).getParameters(), hasSize(2));
@@ -346,71 +394,87 @@ class ErrorServiceTest extends BaseTest {
   }
 
   @ParameterizedTest
-  @CsvSource(textBlock = """
+  @CsvSource(
+      textBlock =
+          """
             ID            | true
             INSTANCE_HRID | true
             ID            | false
             INSTANCE_HRID | false
-          """, delimiter = '|')
+          """,
+      delimiter = '|')
   void testSaveErrorsFromDataImport(IdentifierType identifierType, boolean relatedInstanceInfo) {
     final var sourceRecordId = UUID.randomUUID().toString();
     final var dataExportJobId = UUID.randomUUID();
     final var instanceId = UUID.randomUUID().toString();
-    final var instanceInfo = new RelatedInstanceInfo()
+    final var instanceInfo =
+        new RelatedInstanceInfo()
             .withIdList(List.of(instanceId))
             .withHridList(List.of("instance HRID"));
-    var logEntries = List.of(new JobLogEntry()
-            .withError("some MARC error #1").withSourceRecordId(sourceRecordId)
-            .withRelatedInstanceInfo(
-                    relatedInstanceInfo ? instanceInfo : new RelatedInstanceInfo()
-                            .withIdList(List.of()).withHridList(List.of())
-            ), new JobLogEntry()
-            .withError("some MARC error #2").withSourceRecordId(sourceRecordId)
-            .withRelatedInstanceInfo(
-                    relatedInstanceInfo ? instanceInfo : new RelatedInstanceInfo()
-                            .withIdList(List.of()).withHridList(List.of())
-            ));
+    var logEntries =
+        List.of(
+            new JobLogEntry()
+                .withError("some MARC error #1")
+                .withSourceRecordId(sourceRecordId)
+                .withRelatedInstanceInfo(
+                    relatedInstanceInfo
+                        ? instanceInfo
+                        : new RelatedInstanceInfo().withIdList(List.of()).withHridList(List.of())),
+            new JobLogEntry()
+                .withError("some MARC error #2")
+                .withSourceRecordId(sourceRecordId)
+                .withRelatedInstanceInfo(
+                    relatedInstanceInfo
+                        ? instanceInfo
+                        : new RelatedInstanceInfo().withIdList(List.of()).withHridList(List.of())));
 
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operation = bulkOperationRepository.save(BulkOperation.builder()
-              .id(UUID.randomUUID())
-              .status(COMPLETED_WITH_ERRORS)
-              .identifierType(identifierType)
-              .committedNumOfErrors(2)
-              .dataExportJobId(dataExportJobId)
-              .build());
+      var operation =
+          bulkOperationRepository.save(
+              BulkOperation.builder()
+                  .id(UUID.randomUUID())
+                  .status(COMPLETED_WITH_ERRORS)
+                  .identifierType(identifierType)
+                  .committedNumOfErrors(2)
+                  .dataExportJobId(dataExportJobId)
+                  .build());
 
       errorService.saveErrorsFromDataImport(logEntries, operation);
 
-      var errors = errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 2, 1,
-              ErrorType.ERROR);
+      var errors =
+          errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 2, 1, ErrorType.ERROR);
       assertThat(errors.getErrors(), hasSize(1));
       assertThat(errors.getTotalRecords(), equalTo(2));
-      assertThat(errors.getErrors().stream().map(Error::getMessage).toList(),
-              anyOf(contains("some MARC error #1"), contains("some MARC error #2")));
+      assertThat(
+          errors.getErrors().stream().map(Error::getMessage).toList(),
+          anyOf(contains("some MARC error #1"), contains("some MARC error #2")));
     }
   }
 
   @Test
   void shouldNotSaveErrorIfErrorFromDataImportIsEmpty() {
     final var dataExportJobId = UUID.randomUUID();
-    var logEntries = List.of(new JobLogEntry()
-            .withError("").withRelatedInstanceInfo(
-                    new RelatedInstanceInfo().withIdList(List.of()).withHridList(List.of())
-            ));
+    var logEntries =
+        List.of(
+            new JobLogEntry()
+                .withError("")
+                .withRelatedInstanceInfo(
+                    new RelatedInstanceInfo().withIdList(List.of()).withHridList(List.of())));
 
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operation = bulkOperationRepository.save(BulkOperation.builder()
-              .id(UUID.randomUUID())
-              .status(COMPLETED)
-              .identifierType(IdentifierType.ID)
-              .dataExportJobId(dataExportJobId)
-              .build());
+      var operation =
+          bulkOperationRepository.save(
+              BulkOperation.builder()
+                  .id(UUID.randomUUID())
+                  .status(COMPLETED)
+                  .identifierType(IdentifierType.ID)
+                  .dataExportJobId(dataExportJobId)
+                  .build());
 
       errorService.saveErrorsFromDataImport(logEntries, operation);
 
-      var errors = errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 1, 1,
-              ErrorType.ERROR);
+      var errors =
+          errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 1, 1, ErrorType.ERROR);
       assertThat(errors.getErrors(), hasSize(0));
     }
   }
@@ -418,24 +482,29 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void testSaveErrorsFromDataImport_whenDiscardedAndNoMessage() {
     final var dataExportJobId = UUID.randomUUID();
-    var logEntries = Collections.singletonList(new JobLogEntry()
-            .withSourceRecordActionStatus(JobLogEntry.ActionStatus.DISCARDED).withError("")
-            .withRelatedInstanceInfo(new RelatedInstanceInfo()
-                    .withIdList(List.of()).withHridList(List.of())));
+    var logEntries =
+        Collections.singletonList(
+            new JobLogEntry()
+                .withSourceRecordActionStatus(JobLogEntry.ActionStatus.DISCARDED)
+                .withError("")
+                .withRelatedInstanceInfo(
+                    new RelatedInstanceInfo().withIdList(List.of()).withHridList(List.of())));
 
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var operation = bulkOperationRepository.save(BulkOperation.builder()
-              .id(UUID.randomUUID())
-              .status(COMPLETED_WITH_ERRORS)
-              .identifierType(IdentifierType.ID)
-              .committedNumOfErrors(1)
-              .dataExportJobId(dataExportJobId)
-              .build());
+      var operation =
+          bulkOperationRepository.save(
+              BulkOperation.builder()
+                  .id(UUID.randomUUID())
+                  .status(COMPLETED_WITH_ERRORS)
+                  .identifierType(IdentifierType.ID)
+                  .committedNumOfErrors(1)
+                  .dataExportJobId(dataExportJobId)
+                  .build());
 
       errorService.saveErrorsFromDataImport(logEntries, operation);
 
-      var errors = errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 1, 0,
-              ErrorType.ERROR);
+      var errors =
+          errorService.getErrorsPreviewByBulkOperationId(operation.getId(), 1, 0, ErrorType.ERROR);
       assertThat(errors.getErrors(), hasSize(1));
       assertEquals(DATA_IMPORT_ERROR_DISCARDED, errors.getErrors().get(0).getMessage());
     }
@@ -444,7 +513,8 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void getCommittedNumOfErrorsAndWarningsTest() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .committedNumOfErrors(2)
@@ -452,19 +522,22 @@ class ErrorServiceTest extends BaseTest {
               .linkToCommittedRecordsErrorsCsvFile("link")
               .dataExportJobId(UUID.randomUUID())
               .build());
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("123")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.ERROR)
               .build());
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("456")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.ERROR)
               .build());
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("789")
               .errorMessage(format("%s %s", "message", "link"))
@@ -479,29 +552,34 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void uploadErrorsToStorageShouldReturnNullWhenContentsIsEmpty() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      assertNull(errorService.uploadErrorsToStorage(bulkOperationId,
-              ERROR_COMMITTING_FILE_NAME_PREFIX, null));
+      assertNull(
+          errorService.uploadErrorsToStorage(
+              bulkOperationId, ERROR_COMMITTING_FILE_NAME_PREFIX, null));
     }
   }
 
   @Test
   void saveErrorShouldSaveNothingWhenSpecificErrorMsg() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .linkToCommittedRecordsErrorsCsvFile("link")
               .dataExportJobId(UUID.randomUUID())
               .build());
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("123")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.ERROR)
               .build());
-      errorService.saveError(bulkOperationId, "123", MSG_NO_CHANGE_REQUIRED, "ui msg",
-              "link", ErrorType.ERROR);
-      assertEquals(1, executionContentRepository.countByBulkOperationIdAndErrorType(
+      errorService.saveError(
+          bulkOperationId, "123", MSG_NO_CHANGE_REQUIRED, "ui msg", "link", ErrorType.ERROR);
+      assertEquals(
+          1,
+          executionContentRepository.countByBulkOperationIdAndErrorType(
               bulkOperationId, ErrorType.ERROR));
     }
   }
@@ -509,20 +587,24 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void saveErrorShouldSaveBulkOperationExecutionContent() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var bulkOperationExecContent = BulkOperationExecutionContent.builder()
+      var bulkOperationExecContent =
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("123")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.ERROR)
               .build();
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .linkToCommittedRecordsErrorsCsvFile("link")
               .dataExportJobId(UUID.randomUUID())
               .build());
       errorService.saveError(bulkOperationExecContent);
-      assertEquals(1, executionContentRepository.countByBulkOperationIdAndErrorType(
+      assertEquals(
+          1,
+          executionContentRepository.countByBulkOperationIdAndErrorType(
               bulkOperationId, ErrorType.ERROR));
     }
   }
@@ -530,23 +612,29 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void shouldDeleteErrorByOperationId() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var bulkOperationExecContent = BulkOperationExecutionContent.builder()
+      var bulkOperationExecContent =
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("123")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.ERROR)
               .build();
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .linkToCommittedRecordsErrorsCsvFile("link")
               .dataExportJobId(UUID.randomUUID())
               .build());
       executionContentRepository.save(bulkOperationExecContent);
-      assertEquals(1, executionContentRepository.countByBulkOperationIdAndErrorType(
+      assertEquals(
+          1,
+          executionContentRepository.countByBulkOperationIdAndErrorType(
               bulkOperationId, ErrorType.ERROR));
       errorService.deleteErrorsByBulkOperationId(bulkOperationId);
-      assertEquals(0, executionContentRepository.countByBulkOperationIdAndErrorType(
+      assertEquals(
+          0,
+          executionContentRepository.countByBulkOperationIdAndErrorType(
               bulkOperationId, ErrorType.ERROR));
     }
   }
@@ -554,15 +642,18 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void shouldReturnNothingForErrorsPreviewIfLinkToMatchedErrorsCsvIsNull() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .linkToCommittedRecordsErrorsCsvFile("link")
               .dataExportJobId(UUID.randomUUID())
               .build());
 
-      var actualNumErrors = errorService.getErrorsPreviewByBulkOperationId(bulkOperationId, 10, 0,
-              ErrorType.ERROR).getTotalRecords();
+      var actualNumErrors =
+          errorService
+              .getErrorsPreviewByBulkOperationId(bulkOperationId, 10, 0, ErrorType.ERROR)
+              .getTotalRecords();
       assertEquals(0, actualNumErrors);
     }
   }
@@ -570,13 +661,15 @@ class ErrorServiceTest extends BaseTest {
   @Test
   void shouldReturnNothingForErrorsPreviewForTypeErrorIfOnlyWarningsArePresent() {
     try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
-      var bulkOperationExecContent = BulkOperationExecutionContent.builder()
+      var bulkOperationExecContent =
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(bulkOperationId)
               .identifier("123")
               .errorMessage(format("%s %s", "message", "link"))
               .errorType(ErrorType.WARNING)
               .build();
-      bulkOperationRepository.save(BulkOperation.builder()
+      bulkOperationRepository.save(
+          BulkOperation.builder()
               .id(bulkOperationId)
               .status(COMPLETED_WITH_ERRORS)
               .linkToCommittedRecordsErrorsCsvFile("link")
@@ -585,8 +678,10 @@ class ErrorServiceTest extends BaseTest {
               .build());
       executionContentRepository.save(bulkOperationExecContent);
 
-      var actualNumErrors = errorService.getErrorsPreviewByBulkOperationId(bulkOperationId, 10, 0,
-              ErrorType.ERROR).getTotalRecords();
+      var actualNumErrors =
+          errorService
+              .getErrorsPreviewByBulkOperationId(bulkOperationId, 10, 0, ErrorType.ERROR)
+              .getTotalRecords();
       assertEquals(0, actualNumErrors);
     }
   }
@@ -594,28 +689,31 @@ class ErrorServiceTest extends BaseTest {
   private void mockErrorsData(OperationStatusType statusType, UUID operationId) throws IOException {
     if (DATA_MODIFICATION == statusType || COMPLETED_WITH_ERRORS == statusType) {
       when(remoteFileSystemClient.get(any()))
-              .thenReturn(Files.newInputStream(Paths.get("src/test/resources/files/errors.csv")));
-      when(remoteFileSystemClient.getNumOfLines(any()))
-              .thenReturn(2);
+          .thenReturn(Files.newInputStream(Paths.get("src/test/resources/files/errors.csv")));
+      when(remoteFileSystemClient.getNumOfLines(any())).thenReturn(2);
     } else {
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(operationId)
               .identifier("123")
               .errorMessage("No match found")
               .errorType(ErrorType.ERROR)
               .build());
-      executionContentRepository.save(BulkOperationExecutionContent.builder()
+      executionContentRepository.save(
+          BulkOperationExecutionContent.builder()
               .bulkOperationId(operationId)
               .identifier("456")
               .errorMessage("Invalid format")
               .errorType(ErrorType.ERROR)
               .build());
-      processingContentRepository.save(BulkOperationProcessingContent.builder()
+      processingContentRepository.save(
+          BulkOperationProcessingContent.builder()
               .bulkOperationId(operationId)
               .identifier("123")
               .errorMessage("No match found")
               .build());
-      processingContentRepository.save(BulkOperationProcessingContent.builder()
+      processingContentRepository.save(
+          BulkOperationProcessingContent.builder()
               .bulkOperationId(operationId)
               .identifier("456")
               .errorMessage("Invalid format")
